--- a/wp-content/themes/dons_taxidermy_theme/assets/css/styles/templates/home.scss
+++ b/wp-content/themes/dons_taxidermy_theme/assets/css/styles/templates/home.scss
@@ -1,3 +1,7 @@
+body{
+	overflow-x: hidden;
+}
+
 .gallery{
 	display: block;
 	padding: 3px 0;
@@ -32,15 +36,13 @@
 		overflow: hidden;
 		position: absolute;
 			@media (max-width: $screen-sm-max) {
+				left: 2px;
 				width: 32vw;
 			}
 
 			h4{
 				line-height: 1;
 			}
-	}
-	p{
-		display: none;
 	}
 	
 }
